Ansible/Varios_ansible_playbooks/API_LB/example2/k8s-manifests/api1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api1-deployment
  labels:
    app: api1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api1
  template:
    metadata:
      labels:
        app: api1
    spec:
      containers:
      - name: api1-container
        image: imagen-del-api:tag  # Reemplazar con la imagen y etiqueta del API1
        ports:
        - containerPort: 8080  # Reemplazar con el puerto del contenedor del API1
