Ansible/Varios_ansible_playbooks/API_LB/example2/k8s-manifests/api2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api2-service
spec:
  selector:
    app: api2
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080  # Reemplazar con el puerto del contenedor del API2
