Ansible/Varios_ansible_playbooks/API_LB/example2/k8s-manifests/ingress-lb.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: dominio.com  # Reemplazar con el dominio deseado
    http:
      paths:
      - path: /api1
        pathType: Prefix
        backend:
          service:
            name: api1-service
            port:
              number: 80
      - path: /api2
        pathType: Prefix
        backend:
          service:
            name: api2-service
            port:
              number: 80
